<resources>
    <string name="app_name">NotePad</string>
    <string name="additem">addItem</string>
    <string name="getinfo">getInfo</string>
    <string name="notetitle">noteTitle</string>
    <string name="notetime">noteTime</string>
    <string name="notetext">noteText</string>
    <string name="editnotetitle">editNoteTitle</string>
    <string name="editnotetext">editNoteText</string>
    <string name="savenote">saveNote</string>
    <string name="file_name">Notes.json</string>
    <string name="no_file">No JSON Notes File Present</string>
    <string name="copyright">© 2020, Yuetao Zhu</string>
    <string name="multi_notes">Multi Notes</string>
    <string name="versioninfo">Version 1.0</string>
</resources>